--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "GitHub": "github.com",
-  "Ambiente": "",
-  "correo": ""
+  "Ambiente": "local",
+  "correo": "local@local.com"
 }
