--- a/DeploymentFromBackup.yaml
+++ b/DeploymentFromBackup.yaml
@@ -26,8 +26,7 @@ spec:
     spec:
       containers:
       - name: netcore-demo
-        image: ashwilliams/netcore-upload:latest
-        ports:
+        image: ashwilliams/netcore-upload:v6
         - containerPort: 80
         env:
         - name: GitHub
