--- a/demo-deployment.yaml
+++ b/demo-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: netcore-demo
-        image: ashwilliams/netcore-upload:latest
+        image: ashwilliams/netcore-upload:v6
         ports:
         - containerPort: 80
         env:
